adjust two breakpoints for correct visualization on tablets

--- a/client/src/components/About/About.module.scss
+++ b/client/src/components/About/About.module.scss
@@ -16,7 +16,7 @@
             }
         }
 
-        @media screen and (min-width: 900px) {
+        @media screen and (min-width: 600px) {
             flex-direction: unset;
         }
     }
