--- a/client/src/components/Projects/Projects.module.scss
+++ b/client/src/components/Projects/Projects.module.scss
@@ -1,7 +1,7 @@
 .projects {
     margin-top: 2rem;
 
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 700px) {
         margin: 2rem auto 0 auto;
         max-width: 80%;
 
